feature CRUD for Publisher